--- a/index.html
+++ b/index.html
@@ -10,7 +10,97 @@
 
   </head>
   <body>
-      <h1 class="display-1">Allah Is Alone </h1>
+     
+    
+    <header class="container">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Subscribe</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                    <div class="row">
+                       <div class="d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2 class="h1">Cool Dude Headphone</h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
+                                <h1 style="color: #FF3887;">$420</h1>
+                                <button class="btn px-3 py-2" style="color: #fff; background-color: #FF3887;">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                       </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                    <div class="row">
+                       <div class="d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2 class="h1">X-BOX for your living room</h2>
+                                <p>This is the best x-box in the world for people who just want to waste time in front</p>
+                                <h1 style="color: #FF3887;">$600</h1>
+                                <button class="btn px-3 py-2" style="color: #fff; background-color: #FF3887;">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                       </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                    <div class="row">
+                       <div class="d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2 class="h1">Mega LCD TV For Sports</h2>
+                                <p>This is the best tv in the world for people who just want to waste time in front of tv</p>
+                                <h1 style="color: #FF3887;">$1200</h1>
+                                <button class="btn px-3 py-2" style="color: #fff; background-color: #FF3887;">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                       </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
