--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#"> <img src="images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,7 +41,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                  <div class="carousel-item active p-5 rounded" style="background-color: #FCEAE8;">
                     <div class="row">
                        <div class="d-flex align-items-center">
                             <div class="col-lg-7">
@@ -56,7 +56,7 @@
                        </div>
                     </div>
                   </div>
-                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                  <div class="carousel-item active p-5 rounded" style="background-color: #FCEAE8;">
                     <div class="row">
                        <div class="d-flex align-items-center">
                             <div class="col-lg-7">
@@ -71,7 +71,7 @@
                        </div>
                     </div>
                   </div>
-                  <div class="carousel-item active p-5" style="background-color: #FCEAE8;">
+                  <div class="carousel-item active p-5 rounded" style="background-color: #FCEAE8;">
                     <div class="row">
                        <div class="d-flex align-items-center">
                             <div class="col-lg-7">
@@ -99,7 +99,79 @@
         </section>
     </header>
 
+    <main class="my-5">
+        <!-- categories section start -->
+        <section class="categories">
+            <div class="container text-center">
+                <div class="row g-2">
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-2 border rounded-3 d-flex align-items-center justify-content-around" style="background-color: #FFA500;">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-2 border rounded-3 d-flex align-items-center justify-content-around" style="background-color: #DA70D6;">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-2 border rounded-3 d-flex align-items-center justify-content-around" style="background-color: #0000FF;">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Categories section end -->
 
+        <section class="container my-5">
+            <h3>Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="m-4">
+                      <h3>$120</h3>
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-4">
+                      <h3>$320</h3>
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                    </div>
+                    <div class="m-4">
+                      <h3>$350</h3>
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
