--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         </section>
         <!-- Categories section end -->
 
+        <!-- Shoes section start -->
         <section class="container my-5">
             <h3>Shoes</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -171,6 +172,54 @@
                 </div>
             </div>
         </section>
+        <!-- Shoes section end -->
+
+        <!-- Backpack section start -->
+        <section class="container my-5">
+            <h3 style="margin-top:100px;">Backpack</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <h3>$120</h3>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-4">
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Niltu Bag</h5>
+                      <h3>$320</h3>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-4">
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border border-0 shadow-lg">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Kaltu Bag</h5>
+                      <h3>$169</h3>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="m-4">
+                      <button class="btn" style="color: #fff; background-color: #FF1F77;">Bye Now >></button>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <!-- Backpack section end -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
